# TRPP_Project_Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ask_from_image.py  ocr.py  pyproject.toml  requirements.txt  text_to_image.py
bot/: main.py  router.py
bot/core/: config.py  logging.py  ml_service.py  session_manager.py
bot/core/ml_models/: ask_from_image.py  text_to_image.py
bot/handlers/: __init__.py  ask_from_image.py  cancel.py  help.py  photo_to_text.py  start.py  text_to_photo.py
bot/states/: __init__.py  states.py
