[tool.poetry]
name = "telegram-ml-bot"
version = "0.1.0"
description = "Telegram bot with ML models (aiogram + diffusers + transformers)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
aiofiles = "^23.0.0"
pytesseract = "^0.3.10"
Pillow = "^10.0.0"
diffusers = "^0.37.0"
torch = "^2.1.0"
accelerate = "^1.13.0"
transformers = "^5.3.0"
huggingface-hub = "^1.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
